# agentic-starter-kit-behavioral-tests

./: .gitignore  AGENT-QE.md  CLAUDE.md  COVERAGE.md  LOCALCLUSTER.md  README.md  STATUS.md  conftest.py  pyproject.toml  test-job.json
adversarial/: __init__.py  conftest.py  test_prompt_injection.py  test_safety.py
configs/: thresholds.yaml
deploy/: deploy-all-lib.sh  deploy-all.env.example  deploy-all.sh  kind-setup.sh  mlflow.yaml  new-eval-session.sh  preflight-check.sh  smoke-test.sh  teardown-all.sh
deploy/images/: langgraph-react-agent.Dockerfile
docs/: adding-behavioral-tests.md
evalhub_adapter/: adapter.py  benchmarks.py  config.py
evals/: __init__.py
evals/agentic_rag/: __init__.py  conftest.py  test_response_quality.py  test_retrieval.py
evals/autogen_mcp/: __init__.py  conftest.py  test_mcp_compliance.py  test_tool_contracts.py
evals/langgraph_react/: __init__.py  conftest.py  test_cost_latency.py  test_reliability.py  test_response_quality.py  test_tool_usage.py
evals/vanilla_python/: __init__.py  conftest.py  test_cost_latency.py  test_reliability.py  test_response_quality.py  test_tool_usage.py
fixtures/adversarial/: injection_payloads.yaml
fixtures/agentic_rag/: golden_queries.yaml
fixtures/autogen_mcp/: tool_contracts.yaml
fixtures/benchmarks/: coherence.yaml  full.yaml  latency.yaml  safety.yaml  tool_use.yaml  vanilla-python-job.json  vanilla_python_full.yaml  vanilla_python_tool_use.yaml
fixtures/langgraph_react/: adversarial_inputs.yaml
harness/: __init__.py  mlflow_client.py  prompt_regression.py  runner.py
harness/reporters/: __init__.py  console_reporter.py  json_reporter.py
harness/scorers/: plan_coherence.py  safety.py  tool_sequence.py
tests/behavioral/: conftest.py
tests/behavioral/adversarial/: conftest.py  test_boundary_conditions.py  test_prompt_injection.py
tests/behavioral/api_contract/: conftest.py  test_api_contract.py
tests/behavioral/fixtures/adversarial/: injection_payloads.yaml
tests/behavioral/harness/: mlflow_client.py  runner.py
tests/behavioral/harness/scorers/: latency.py  safety.py  tool_sequence.py
