[project]
name = "agentic-eval-framework"
version = "0.1.0"
description = "Evaluation harness for agentic AI systems"
requires-python = ">=3.11"
dependencies = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "httpx>=0.27",
    "pyyaml>=6.0",
    "pydantic>=2.0",
    "rich>=13.0",
]

[project.optional-dependencies]
mlflow = ["mlflow>=2.0"]
llm-judge = ["openai>=1.0"]
dev = ["ruff", "mypy"]

[project.scripts]
eval-run = "harness.runner:main"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["evals", "adversarial"]
markers = [
    "langgraph_react: LangGraph React agent (dummy web search tool)",
    "langgraph_rag: LangGraph Agentic RAG agent (retriever + vector store)",
    "autogen_mcp: AutoGen MCP agent (SSE tool discovery)",
    "api_contract: FastAPI endpoint schema, validation, streaming (tests repo code)",
    "adversarial: Agent-level security/safety tests (PII, API keys, dangerous ops)",
    "model_baseline: Model-level tests (prompt injection resistance) - not agent-specific",
    "slow: Tests that run multiple iterations (pass@k, repeated queries)",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.backends._legacy:_Backend"
